logs/ityou.bluetheme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ityou'...
Listing './lib/python3.5/site-packages/ityou/bluetheme'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/Extensions'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/browser'...
Compiling './lib/python3.5/site-packages/ityou/bluetheme/browser/event_listing.py'...
***   File "./lib/python3.5/site-packages/ityou/bluetheme/browser/event_listing.py", line 107
    start  = datetime(year,month,01)
                                  ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/ityou/bluetheme/browser/images'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/browser/javascripts'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/browser/stylesheets'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/browser/templates'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/locales'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/profiles'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/profiles/default'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/profiles/uninstall'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/skins'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/skins/ityou_bluetheme_images'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/skins/ityou_bluetheme_styles'...
Listing './lib/python3.5/site-packages/ityou/bluetheme/skins/ityou_bluetheme_templates'...
Listing './lib/python3.5/site-packages/ityou.bluetheme-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
